# PKO-Next

./: .gitignore  .gitmodules  README.md  build_deps_next.bat  build_ogre_next.bat  build_pko_project.bat
PKO_Project/: .gitignore  CMakeLists.txt
PKO_Project/extra/: resources2.cfg
PKO_Project/include/: LogWindow.h  OgreNextImguiGameState.h
PKO_Project/src/: LogWindow.cpp  OgreNextImguiDemo.cpp  OgreNextImguiGameState.cpp
PKO_Project/src/OgreCommon/: TutorialGameState.cpp
